--- a/style.css
+++ b/style.css
@@ -233,6 +233,48 @@ body {
     margin-bottom: 20px;
 }
 
+.footer {
+    display: grid;
+    height: 100%;
+    width: 100%;
+    place-items: center;
+    background: linear-gradient(315deg, #ddd 0%, #ddd 74%);
+}
+
+.wrapper {
+    display: inline-flex;
+}
+
+.wrapper .icon {
+    margin: 0 20px;
+    text-align: center;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+    z-index: 2;
+    transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.155);
+}
+
+.wrapper .icon span {
+    display: block;
+    height: 60px;
+    width: 60px;
+    background: #fff;
+    border-radius: 50%;
+    position: relative;
+    z-index: 2;
+    box-shadow: 0px 10px 10px black;
+    transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.155);
+}
+
+/* .wrapper .icon span i {} */
+
+
+
+
+
 
 /* responsive brake Point  */
 
