--- a/style.css
+++ b/style.css
@@ -269,8 +269,7 @@ body {
     transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.155);
 }
 
-/* .wrapper .icon span i {} */
-
+/* .wrapper .icon span i {}
 
 
 
