--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ img {
 }
 
 body {
+    /* display: grid; */
     background-color: #ddd;
     font-size: 18px;
     font-family: 'Roboto Mono', monospace;
@@ -233,12 +234,15 @@ body {
     margin-bottom: 20px;
 }
 
-.footer {
+/* socmed icon */
+
+.socmed {
+    padding: 40px;
     display: grid;
     height: 100%;
     width: 100%;
     place-items: center;
-    background: linear-gradient(315deg, #ddd 0%, #ddd 74%);
+    /* background: linear-gradient(315deg, #ecf0f1 0%, #d7e1ec 74%); */
 }
 
 .wrapper {
@@ -246,10 +250,11 @@ body {
 }
 
 .wrapper .icon {
-    margin: 0 20px;
+    margin: 0px 20px;
     text-align: center;
     cursor: pointer;
     display: flex;
+    align-items: center;
     justify-content: center;
     flex-direction: column;
     position: relative;
@@ -265,13 +270,56 @@ body {
     border-radius: 50%;
     position: relative;
     z-index: 2;
-    box-shadow: 0px 10px 10px black;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
     transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.155);
 }
 
-/* .wrapper .icon span i {}
+.wrapper .icon span i {
+    line-height: 60px;
+    font-size: 25px;
+}
 
+.wrapper .icon .tooltip {
+    position: absolute;
+    top: 0;
+    z-index: 1;
+    background: #fff;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 10px 18px;
+    border-radius: 25px;
+    opacity: 0;
+    pointer-events: none;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
+    transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
 
+.wrapper .icon:hover .tooltip {
+    top: -70px;
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.icon .tooltip:before {
+    position: absolute;
+    content: "";
+    height: 15px;
+    width: 15ox;
+    background: #fff;
+    left: 50%;
+    bottom: -6;
+    transform: translateX(-50%) rotate(45deg);
+    transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.wrapper .icon:hover span {
+    color: #fff;
+}
+
+.wrapper .icon:hover span, .wrapper .icon:hover .tooltip {
+    text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.4);
+}
 
 
 
