--- a/style.css
+++ b/style.css
@@ -324,7 +324,7 @@ body {
     position: absolute;
     content: "";
     height: 15px;
-    width: 15ox;
+    width: 15px;
     background: #fff;
     left: 50%;
     bottom: -6;
