--- a/style.css
+++ b/style.css
@@ -285,11 +285,11 @@ body {
     display: block;
     height: 60px;
     width: 60px;
-    background: #fff;
+    /* background: #ddd; */
     border-radius: 50%;
     position: relative;
     z-index: 2;
-    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1); */
     transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.155);
 }
 
@@ -305,7 +305,7 @@ body {
     background: #fff;
     color: #fff;
     font-size: 20px;
-    font-weight: 500;
+    font-weight: 50px;
     padding: 10px 18px;
     border-radius: 25px;
     opacity: 0;
@@ -325,7 +325,7 @@ body {
     content: "";
     height: 15px;
     /* width: ; */
-    background: #fff;
+    /* background: #fff; */
     left: 50%;
     bottom: -6;
     transform: translateX(-50%) rotate(45deg);
@@ -379,7 +379,7 @@ body {
 /* footer */
 footer {
     text-align: center;
-    margin-top: 90px;
+    margin-top: 40px;
 }
 
 /* responsive brake Point  */
@@ -462,13 +462,32 @@ footer {
 
     .wrapper .icon {
         margin: 5px;
+        background-color: #ddd;
+    }
+
+    .wrapper .icon span i {
+        font-size: 30px
     }
 
     .wrapper .icon span {
-        /* line-height: 40px; */
         width: 40px;
+        background-color: #ddd;
 
     }
 
+    .wrapper .icon:hover span {
+        color: #000;
+        background-color: #ddd;
+    }
+
+    .twitter:hover i {
+        background-color: #ddd;
+        color: #000;
+    }
+
+    .wrapper .twitter:hover span {
+        background-color: #ddd;
+        color: #000;
+    }
 
 }
